--- a/xmobar/.xmobarrc
+++ b/xmobar/.xmobarrc
@@ -9,10 +9,26 @@ Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
                     , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
+		    -- battery monitor  
+		    , Run Battery       [ "--template"  ,  "Battery: <acstatus>"
+					, "--Low"       ,  "10" --units: %
+					, "--High"      ,  "80" --units: %
+					, "--low"       ,  "darkred"
+					, "--normal"    ,  "darkorange"
+					, "--high"      ,  "darkgreen"
+
+					, "--" -- battery specific options
+						  -- discharging status
+						  , "-o"    , "<left>% (<timeleft>)"
+						  -- AC "on" status
+						  , "-O"    , "<fc=#dAA520>Charging</fc>"
+						  -- charged status
+						  , "-i"    , "<fc=#006000>Charged</fc>" 
+					] 50
                     , Run Com "uname" ["-s","-r"] "" 36000
     		    , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% }{ <fc=#ee9a00>%date%</fc>| %EGPF% | %uname%"
+       , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% }{ <fc=#ee9a00>%date%</fc>| %EGPF% | %battery%"
        }
