--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -133,7 +133,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
+opacity-rule = [
+  "80:class_g = 'Alacritty' && focused",
+  "60:class_g = 'Alacritty' && !focused"
+];
 
 
 #################################
@@ -158,18 +161,18 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method =
+blur-method = "dual_kawase";
 # blur-size = 12
 #
 # blur-deviation = false
 #
-# blur-strength = 5
+blur-strength = 5
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = true;
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
@@ -209,8 +212,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+backend = "glx"
+#backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
