Got xmobar working with font
Also made some small changes to font sizing and border color of active
windows.

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -135,7 +135,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 opacity-rule = [
   "80:class_g = 'Alacritty' && focused",
-  "60:class_g = 'Alacritty' && !focused"
+  "60:class_g = 'Alacritty' && !focused",
+  "75:name = 'xmobar'"
 ];
 
 
