--- a/xmobar/.xmobarrc
+++ b/xmobar/.xmobarrc
@@ -1,4 +1,4 @@
-Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
+Config { font = "Iosevka 10"
        , bgColor = "black"
        , fgColor = "grey"
        , position = Top
