Added signing key (SSH) to .gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,8 @@
 [user]
 	email = 73853725+talhaahussain@users.noreply.github.com
 	name = talhaahussain
+	signingkey = ~/.ssh/id_rsa.pub
 [core]
 	editor = vim
+[gpg]
+	format = ssh
