Added transparency to dmenu using picom

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -136,6 +136,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [
   "80:class_g = 'Alacritty' && focused",
   "60:class_g = 'Alacritty' && !focused",
+  "80:class_g = 'dmenu'",
   "75:name = 'xmobar'"
 ];
 
