--- a/xmobar/.config/xmobar/.xmobarrc
+++ b/xmobar/.config/xmobar/.xmobarrc
@@ -21,14 +21,15 @@ Config { font = "Iosevka 10"
 						  -- discharging status
 						  , "-o"    , "<left>% (<timeleft>)"
 						  -- AC "on" status
-						  , "-O"    , "<fc=#dAA520>Charging</fc>"
+						  , "-O"    , "<fc=#dAA520>Charging - <left>%</fc>"
 						  -- charged status
-						  , "-i"    , "<fc=#006000>Charged</fc>" 
+						  , "-i"    , "<fc=#006000>Charged - <left>%</fc>" 
 					] 50
                     , Run Com "uname" ["-s","-r"] "" 36000
-    		    , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
+    		        , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
+                    , Run Volume "default" "Master" [] 10 
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% }{ <fc=#ee9a00>%date%</fc>| %EGPF% | %battery%"
+       , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% }{ <fc=#ee9a00>%date%</fc>| %EGPF% | %battery% | %volume%"
        }
